Avoid highlighting topic on expand/collapse

--- a/README_styles.css
+++ b/README_styles.css
@@ -64,6 +64,11 @@ body.format-multitopic ul.sections li.section:not(.hidden) .content .sectionname
 body.format-multitopic ul.sections li.section:not(.hidden) .content .sectionname a {
     color: #000;
 }
+body.format-multitopic ul.sections li.section .content .sectionname a:focus {
+    background-color: inherit;
+    box-shadow: inherit;
+    -webkit-box-shadow: inherit;
+  }
 body.format-multitopic ul.sections li.section .content .sectionname .section_subtitle {
     font-size: small;
 }
